feat: Update button styles and enhance layout for block editor

--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -82,7 +82,7 @@
       <div class="card-content">
         <div id="block-editor" class="block-editor"></div>
         <div class="block-actions-row">
-          <button type="button" id="add-block-btn" class="btn-small btn-secondary">Block hinzufügen</button>
+          <button type="button" id="add-block-btn" class="btn-primary">+ Block hinzufügen</button>
           <div id="add-block-dropdown" class="add-block-dropdown hidden">
             <button type="button" data-type="paragraph">Absatz</button>
             <button type="button" data-type="heading" data-level="1">Überschrift 1</button>
