--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -382,7 +382,48 @@
         chip.className = 'nav-chip';
         chip.dataset.href = href;
         chip.textContent = text;
+        chip.draggable = true;
         chip.addEventListener('click', () => editNavLink(chip));
+
+        // Drag & Drop
+        chip.addEventListener('dragstart', (e) => {
+          chip.classList.add('dragging');
+          e.dataTransfer.effectAllowed = 'move';
+        });
+
+        chip.addEventListener('dragend', () => {
+          chip.classList.remove('dragging');
+          navLinks.querySelectorAll('.nav-chip').forEach(c => c.classList.remove('drag-over'));
+        });
+
+        chip.addEventListener('dragover', (e) => {
+          e.preventDefault();
+          const dragging = navLinks.querySelector('.dragging');
+          if (dragging && dragging !== chip) {
+            chip.classList.add('drag-over');
+          }
+        });
+
+        chip.addEventListener('dragleave', () => {
+          chip.classList.remove('drag-over');
+        });
+
+        chip.addEventListener('drop', (e) => {
+          e.preventDefault();
+          const dragging = navLinks.querySelector('.dragging');
+          if (dragging && dragging !== chip) {
+            const allChips = [...navLinks.querySelectorAll('.nav-chip')];
+            const dragIndex = allChips.indexOf(dragging);
+            const dropIndex = allChips.indexOf(chip);
+            if (dragIndex < dropIndex) {
+              chip.after(dragging);
+            } else {
+              chip.before(dragging);
+            }
+          }
+          chip.classList.remove('drag-over');
+        });
+
         return chip;
       }
 
