--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -121,7 +121,10 @@
             <p id="footer-global-hint" class="override-hint">✓ Globaler Footer wird verwendet</p>
           </div>
           <div id="footer-editor" class="override-editor hidden">
-            <input type="text" id="footer-text" placeholder="© 2024 Mein Blog">
+            <div class="footer-editor-row">
+              <input type="text" id="footer-text" placeholder="© 2024 Mein Blog">
+              <button type="button" id="insert-bytes-btn" class="btn-primary">+ Bytes</button>
+            </div>
           </div>
         </div>
 
@@ -475,6 +478,8 @@
 
       // ============ FOOTER EDITOR ============
 
+      const insertBytesBtn = document.getElementById('insert-bytes-btn');
+
       // Load global footer into disabled field
       function loadGlobalFooter() {
         if (window.globalConfig?.footer?.content) {
@@ -485,6 +490,17 @@
       footerEnabled.addEventListener('change', () => {
         footerGlobalHint.classList.toggle('hidden', footerEnabled.checked);
         footerText.disabled = !footerEnabled.checked;
+        insertBytesBtn.disabled = !footerEnabled.checked;
+      });
+
+      insertBytesBtn.addEventListener('click', () => {
+        const cursorPos = footerText.selectionStart;
+        const textBefore = footerText.value.substring(0, cursorPos);
+        const textAfter = footerText.value.substring(cursorPos);
+        footerText.value = textBefore + '{{bytes}}' + textAfter;
+        footerText.focus();
+        footerText.setSelectionRange(cursorPos + 9, cursorPos + 9);
+        debouncedPreview();
       });
 
       // ============ CSS EDITOR ============
@@ -1175,6 +1191,7 @@
       
       footerEditor.classList.remove('hidden');
       footerText.disabled = true;
+      insertBytesBtn.disabled = true;
       
       cssEditor.classList.remove('hidden');
       cssRules.disabled = true;
