feat: Update navigation rail item and adjust layout for improved spacing and alignment

--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -61,7 +61,7 @@
           </div>
         </div>
       </div>
-      <div class="rail-item">
+      <div class="rail-item" id="nav-rail-item">
         <span>Navigation</span>
         <span id="nav-bytes">0 B</span>
       </div>
@@ -245,7 +245,7 @@
             </div>
           </div>
         </div>
-        <button id="publish-btn" class="btn-primary build-publish-btn">Build & Publish</button>
+        <button id="publish-btn" class="btn-primary build-publish-btn">Publish</button>
       </div>
     </div>
   </div>
