feat: Update button label to 'Build & Publish' and adjust editor card border color and page type select min-width

--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -245,7 +245,7 @@
             </div>
           </div>
         </div>
-        <button id="publish-btn" class="btn-primary build-publish-btn">Publish</button>
+        <button id="publish-btn" class="btn-primary build-publish-btn">Build & Publish</button>
       </div>
     </div>
   </div>
